--- a/Asset/modules/_color.scss
+++ b/Asset/modules/_color.scss
@@ -1,10 +1,12 @@
-$nav : linear-gradient(0deg, #FFFFFF, #FFFFFF), linear-gradient(90.01deg, #08BD46 0.84%, rgba(44, 255, 204, 0) 194.85%);
+$nav : linear-gradient(0deg, #FFFFFF, #FFFFFF);
 $color1 : #028C32;
 $ptext1 : #00000066;
 $btn : #000000;
 $ptext2 : #FFFFFF;
 $bg1 :#EEEEEE;
 $bg2 : #E5E5E5;
+$fa : #646765;
+
 $placeholder : rgba(0, 0, 0, 0.36);
 $accordion: rgba(154, 153, 153, 0.08);
 $testimonial: linear-gradient(270deg, rgba(255, 255, 255, 0.24) 5.66%, rgba(255, 255, 255, 0) 98.72%);
