--- a/style.css
+++ b/style.css
@@ -4,4 +4,123 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+.navbar {
+  background-color: linear-gradient(0deg, #FFFFFF, #FFFFFF);
+  -webkit-box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.16);
+}
+
+.navbar .navbar-brand span {
+  color: #028C32;
+}
+
+@media screen and (max-width: 910px) {
+  .navbar .navbar-brand span {
+    display: none;
+  }
+}
+
+.navbar .navbar-toggler {
+  border: none !important;
+}
+
+.navbar .fa {
+  color: #646765;
+}
+
+.navbar ul li a {
+  font-weight: 600;
+  color: #028C32 !important;
+}
+
+.aboutUs {
+  background-image: url(./Asset/img/aboutUsBg.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #028C32;
+  background-position: center;
+}
+
+.aboutUs h2 {
+  color: #FFFFFF;
+  padding-top: 10vh;
+}
+
+.aboutUs p {
+  color: #FFFFFF;
+}
+
+.wasteMenace .wasteText h2 {
+  color: #028C32;
+}
+
+.wasteMenace .wasteText p {
+  font-size: small;
+}
+
+.OurSolution {
+  background-color: #028C32;
+}
+
+.OurSolution .solutionText h2 {
+  color: #FFFFFF;
+}
+
+.OurSolution .solutionText p {
+  color: #FFFFFF;
+}
+
+.wasteRecycle {
+  background-color: #EEEEEE;
+}
+
+.wasteRecycle .RecycleText p {
+  padding-top: 10vh;
+}
+
+.advice .adviceText {
+  text-align: center;
+}
+
+.advice .adviceText h4 {
+  padding-top: 10vh;
+  color: #028C32;
+}
+
+.advice .adviceText p {
+  padding: 10vh;
+}
+
+footer {
+  background-color: #028C32;
+}
+
+footer .newsletter {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+footer .newsletter label {
+  color: #FFFFFF;
+}
+
+footer .newsletter button {
+  background-color: #000000;
+  color: #FFFFFF;
+}
+
+footer .ft .abt ul li, footer .ft .contact ul li, footer .ft .services ul li {
+  list-style: none;
+}
+
+footer .ft .abt ul li a, footer .ft .contact ul li a, footer .ft .services ul li a {
+  text-decoration: none;
+  color: #FFFFFF;
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
